# rules_js

./: MODULE.bazel  package.json  pnpm-lock.yaml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
.aspect/workflows/: config.yaml
.github/workflows/: ci.yaml  release.yml
docs/: js_binary.md
e2e/gyp_no_install_script/snapshots/bzlmod/: segfault-handler_defs.bzl
e2e/nextjs-15/: .bazelignore  MODULE.bazel  pnpm-lock.yaml  pnpm-workspace.yaml
e2e/nextjs-15/esm/: BUILD.bazel  next.config.js  server_test.sh
e2e/nextjs-15/js/: BUILD.bazel  next.config.js
e2e/npm_aliases/: BUILD.bazel  defs_checked.bzl  pnpm-lock.yaml  repositories_checked.bzl
e2e/npm_aliases/lib/: package.json
e2e/npm_translate_lock/: BUILD.bazel  is_odd_links_defs_checked.bzl  main-circle-digraph  npm_defs_checked.bzl  package.json  pnpm-lock.yaml  repositories_checked.bzl
e2e/npm_translate_lock/.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
e2e/npm_translate_lock_auth/: test.sh
e2e/pnpm_lockfiles/: MODULE.bazel  WORKSPACE  lockfile-test.bzl  setup.sh
e2e/pnpm_lockfiles/cases/: isaacs-cliui-v54.yaml  isaacs-cliui-v61.yaml
e2e/pnpm_lockfiles/v54/: pnpm-lock.yaml
e2e/pnpm_lockfiles/v54/snapshots/: defs.bzl  rollup_links_defs.bzl
e2e/pnpm_lockfiles/v60/: pnpm-lock.yaml
e2e/pnpm_lockfiles/v60/snapshots/: defs.bzl  rollup_links_defs.bzl
e2e/pnpm_lockfiles/v61/: pnpm-lock.yaml
e2e/pnpm_lockfiles/v90/: pnpm-lock.yaml
e2e/pnpm_lockfiles/v90/snapshots/: defs.bzl
e2e/pnpm_workspace/app/a/: main.js
e2e/pnpm_workspace/lib/a/: index.js
e2e/pnpm_workspace/lib/c/: index.js
e2e/pnpm_workspace_rerooted/lib/b/: index.js
e2e/rules_js-1218/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md
e2e/rules_js-1218/other-modules/rules_foo/: BUILD.bazel  MODULE.bazel  defs.bzl  generate_build_bazel.py  package.json  pnpm-lock.yaml
e2e/workspace_external/: BUILD.bazel  WORKSPACE
e2e/wrapper_workspace/: BUILD.bazel  WORKSPACE  defs.bzl  repositories.bzl
js/private/: js_binary.bzl  js_binary.sh.tpl  js_helpers.bzl  js_image_layer.bzl  js_image_layer.mjs.tpl  js_info.bzl  js_library.bzl  js_run_devserver.mjs
js/private/node-patches/: fs.js
js/private/node-patches/src/: fs.ts
js/private/node-patches_legacy/: fs.js
js/private/node-patches_legacy/src/: fs.ts
js/private/test/node-patches/: realpath.js
npm/: BUILD.bazel  extensions.bzl
npm/private/: npm_import.bzl  npm_translate_lock.bzl  npm_translate_lock_generate.bzl  npm_translate_lock_helpers.bzl  npm_translate_lock_state.bzl  pnpm.bzl  transitive_closure.bzl  utils.bzl
npm/private/test/: parse_pnpm_lock_tests.bzl  utils_tests.bzl
npm/private/test/snapshots/bzlmod/: npm_defs.bzl  (+2 more)
(+2 files in other folders)
