load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

build_test(
    name = "test",
    targets = [
        ":node_modules",
    ],
)

write_source_files(
    name = "write_npm_translate_lock",
    files = {
        "is_odd_links_defs_checked.bzl": "@npm__is-odd__3.0.1__links//:defs.bzl",
        "repositories_checked.bzl": "@npm//:repositories.bzl",
        "npm_defs_checked.bzl": "@npm//:defs.bzl",
    },
)
