load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_binary(
    name = "a_bin",
    data = [":node_modules"],
    entry_point = "a.js",
)

build_test(
    name = "a_bin_test",
    targets = [
        ":a_bin",
        ":node_modules",
    ],
)
