load("@aspect_rules_js//contrib/nextjs:defs.bzl", "nextjs_standalone_build", "nextjs_standalone_server")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//esm:next/package_json.bzl", next_bin = "bin")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

npm_link_all_packages()

next_bin.next_binary(
    name = "next_js_binary",
)

js_library(
    name = "lib",
    srcs = ["pages/index.js"],
    deps = [
        ":node_modules/next",
        ":node_modules/react",
        ":node_modules/react-dom",
    ],
)

nextjs_standalone_build(
    name = "standalone",
    srcs = [":lib"],
    config = "next.config.js",
    next_js_binary = ":next_js_binary",
)

nextjs_standalone_server(
    name = "server",
    app = ":standalone",
    data = [
        ":node_modules/next",
        ":node_modules/react",
        ":node_modules/react-dom",
    ],
)

build_test(
    name = "test",
    targets = [
        ":standalone",
        ":server",
    ],
)

sh_test(
    name = "server_test",
    srcs = ["server_test.sh"],
    data = [":_server.standalone"],
)
